log/build_2022-11-29_08-48-59/mypkg/stderr.log
  File "/home/kachi/ros2_ws/install/mypkg/lib/python3.6/site-packages/mypkg/listener.py", line 2
    1 import rclpy
           ^
SyntaxError: invalid syntax

